--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sami SAOUD</title><link rel="icon" type="image/png" href="imgs/favicon.png"><link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css"><link rel="stylesheet" href="css/index.css"></head><body><div class="container" id="main-content"><div class="sidebar"><div class="sidebar-content"><p class="vertical-text">BIENVENUE</p><hr class="divider"><p class="vertical-text">© 2024</p></div></div><section class="controls"><div class="key-row"><div class="key">↑</div></div><div class="key-row"><div class="key">←</div><div class="key">↓</div><div class="key">→</div></div><div class="key-row"><div class="key space">Espace</div></div></section><nav class="navigation"><div class="nav-item projets"><a href="work.html" class="responsive-text"><span class="first-part">PRO</span><span class="second-part">JETS</span></a></div><div class="nav-item moi"><a href="about.html" id="littlenav">MOI</a></div><div class="nav-item contact"><a href="contact.html" class="responsive-text"><span class="first-part">CONT</span><span class="second-part">ACT</span></a></div></nav><section class="info"><p class="name">SAMI SAOUD</p><p class="details">Actuellement étudiant en<br>Informatique à <a href="https://www.univ-rennes.fr" target="_blank">l'Université de Rennes</a></p></section><div class="character" id="character"></div><div class="platform" id="top-platform"></div><div class="platform" id="bottom-platform"></div><div class="platform" id="left-platform"></div><div class="platform" id="right-platform"></div><div class="platform" id="first-platform"></div><div class="platform" id="second-platform"></div><div class="platform" id="third-platform"></div><div class="platform" id="fourth-platform"></div><div class="platform" id="projets-platform"></div><div class="platform" id="moi-platform"></div><div class="platform" id="contact-platform"></div><div class="platform" id="info-platform"></div></div><script src="js/index.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Sami SAOUD</title>
+    <link rel="icon" type="image/png" href="imgs/favicon.png">
+    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+    <div class="container" id="main-content">
+        <div class="sidebar">
+            <div class="sidebar-content">
+                <p class="vertical-text">BIENVENUE</p>
+                <hr class="divider">
+                <p class="vertical-text">© 2024</p>
+            </div>
+        </div>
+        <section class="controls">
+            <div class="key-row">
+                <div class="key">↑</div>
+            </div>
+            <div class="key-row">
+                <div class="key">←</div>
+                <div class="key">↓</div>
+                <div class="key">→</div>
+            </div>
+            <div class="key-row">
+                <div class="key space">Espace</div>
+            </div>
+        </section>
+        <nav class="navigation"><a href="work.html" class="responsive-text"><span class="first-part">PRO</span><span
+                    class="second-part">JETS</span></a> <a href="about.html" id="littlenav">MOI</a> <a
+                href="contact.html" class="responsive-text"><span class="first-part">CONT</span><span
+                    class="second-part">ACT</span></a></nav>
+        <section class="info">
+            <p class="name">SAMI SAOUD</p>
+            <p class="details">Actuellement étudiant en<br>Informatique à <a href="https://www.univ-rennes.fr"
+                    target="_blank">l'Université de Rennes</a></p>
+        </section>
+        <div class="character" id="character"></div>
+        <div class="platform" id="top-platform"></div>
+        <div class="platform" id="bottom-platform"></div>
+        <div class="platform" id="left-platform"></div>
+        <div class="platform" id="right-platform"></div>
+        <div class="platform" id="first-platform"></div>
+        <div class="platform" id="second-platform"></div>
+        <div class="platform" id="third-platform"></div>
+        <div class="platform" id="fourth-platform"></div>
+        <div class="platform" id="projets-platform"></div>
+        <div class="platform" id="moi-platform"></div>
+        <div class="platform" id="contact-platform"></div>
+        <div class="platform" id="info-platform"></div>
+    </div>
+    <script src="js/index.js"></script>
+</body>
+
+</html>
