Tout est super responsive !

--- a/projets/creative-seeds.html
+++ b/projets/creative-seeds.html
@@ -1,1 +1,104 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sami SAOUD</title><link rel="icon" type="image/png" href="../imgs/favicon.png"><link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css"><link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css"><link rel="stylesheet" href="../css/workspages.css"><style>*{color:#000}.title{color:#fff}.roles span{color:#000}.roles p{color:#000}.content-section{background-color:#fff}.image-gallery{background-color:#fff}.image-description{background-color:#fff}.video-container{background-color:#fff}.brown-rectangle{background-color:#124731}.initial-section{background-color:#fff}.footer{background-color:#fff}</style></head><body><div class="container"><div class="initial-section"><div class="brown-rectangle"></div><h1 class="title">CREATIVE SEEDS</h1></div><div class="sidebar"><div class="sidebar-content"><a href="../work.html"><p class="vertical-text">PROJETS</p></a><hr class="divider"><p class="vertical-text">© 2024</p></div></div><div class="content-section"><p class="description">Projet de modélisation 3D créé au sein de l'école Creative Seeds, à l'occasion d'une spécialité en L2.</p><div class="roles"><div class="role-item"><span class="role-title">ROLE</span><p>Indépendant</p></div><div class="role-item"><span class="role-title">RESPONSABILITES</span><p>Design, Modeling, Animation, Level Design</p></div><div class="role-item"><span class="role-title">LANGAGES</span><p>C++</p></div></div></div><div class="image-gallery"><img src="../imgs//creativeSeeds/creativeSeeds1.png" alt="Image 1" class="large"></div><p class="image-description">Le but était d'habiller le personnage en modélisant le tout de A à Z. J'ai décidé de faire un gentleman, avec une veste<br>longue, un chapeau, ainsi qu'une moustache.</p><div class="video-container"><video autoplay loop muted playsinline style><source src="../imgs/creativeSeeds/1019.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Après avoir modélisé les vêtements et texturisé le personnage grâce à <strong>Maya</strong><br>et <strong>Adobe Substance</strong>, j'ai créé un petit monde, pour montrer les animations importées de <strong>Mixamo</strong>, et j'ai codé le mouvement<br>du personnage sur <strong>Unreal Engine</strong>.</p></div><script src="js/workspages.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Sami SAOUD</title>
+    <link rel="icon" type="image/png" href="../imgs/favicon.png">
+    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
+    <link rel="stylesheet" href="../css/workspages.css">
+    <style>
+        * {
+            color: #000
+        }
+
+        .title {
+            color: #fff
+        }
+
+        .roles span {
+            color: #000
+        }
+
+        .roles p {
+            color: #000
+        }
+
+        .content-section {
+            background-color: #fff
+        }
+
+        .image-gallery {
+            background-color: #fff
+        }
+
+        .image-description {
+            background-color: #fff
+        }
+
+        .video-container {
+            background-color: #fff
+        }
+
+        .brown-rectangle {
+            background-color: #124731
+        }
+
+        .initial-section {
+            background-color: #fff
+        }
+
+        .footer {
+            background-color: #fff
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="initial-section">
+            <div class="brown-rectangle"></div>
+            <h1 class="title">CREATIVE SEEDS<br> 🠛</h1>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-content"><a href="../work.html">
+                    <p class="vertical-text">PROJETS</p>
+                </a>
+                <hr class="divider">
+                <p class="vertical-text">© 2024</p>
+            </div>
+        </div>
+        <div class="content-section">
+            <p class="description">Projet de modélisation 3D créé au sein de l'école Creative Seeds, à l'occasion d'une
+                spécialité en L2.</p>
+            <div class="roles">
+                <div class="role-item"><span class="role-title">ROLE</span>
+                    <p>Indépendant</p>
+                </div>
+                <div class="role-item"><span class="role-title">RESPONSABILITES</span>
+                    <p>Design, Modeling, Animation, Level Design</p>
+                </div>
+                <div class="role-item"><span class="role-title">LANGAGES</span>
+                    <p>C++</p>
+                </div>
+            </div>
+        </div>
+        <div class="image-gallery"><img src="../imgs//creativeSeeds/creativeSeeds1.png" alt="Image 1" class="large">
+        </div>
+        <p class="image-description">Le but était d'habiller le personnage en modélisant le tout de A à Z. J'ai décidé
+            de faire un gentleman, avec une veste<br>longue, un chapeau, ainsi qu'une moustache.</p>
+        <div class="video-container"><video autoplay loop muted playsinline style>
+                <source src="../imgs/creativeSeeds/1019.mp4" type="video/mp4">Votre navigateur ne supporte pas les
+                vidéos HTML5.</source>
+            </video></div>
+        <p class="image-description">Après avoir modélisé les vêtements et texturisé le personnage grâce à
+            <strong>Maya</strong><br>et <strong>Adobe Substance</strong>, j'ai créé un petit monde, pour montrer les
+            animations importées de <strong>Mixamo</strong>, et j'ai codé le mouvement<br>du personnage sur
+            <strong>Unreal Engine</strong>.</p>
+    </div>
+    <script src="js/workspages.js"></script>
+</body>
+
+</html>
