--- a/projets/jeu-nsi.html
+++ b/projets/jeu-nsi.html
@@ -1,1 +1,131 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sami SAOUD</title><link rel="icon" type="image/png" href="../imgs/favicon.png"><link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css"><link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css"><link rel="stylesheet" href="../css/workspages.css"><style>*{color:#fff}body{background-color:#1a1818}.title{color:#1a1818}.roles span{color:#fff}.roles p{color:#fff}.content-section{background-color:#1a1818}.image-gallery{background-color:#1a1818}.image-description{background-color:#1a1818}.video-container{background-color:#1a1818}.brown-rectangle{background-color:#d5c4fc}.initial-section{background-color:#1a1818}.footer{background-color:#1a1818}.sidebar a::before{background-color:#fff}.divider{background-color:#fff}</style></head><body><div class="container"><div class="initial-section"><div class="brown-rectangle"></div><h1 class="title">SERIOUS GAME L'ANTI-CASINO</h1></div><div class="sidebar"><div class="sidebar-content"><a href="../work.html"><p class="vertical-text">PROJETS</p></a><hr class="divider"><p class="vertical-text">© 2024</p></div></div><div class="content-section"><p class="description">Projet de différents jeux qui visent les joueurs de jeux d'argent, afin de continuer à jouer sans dépenser de la monnaie réelle.</p><div class="roles"><div class="role-item"><span class="role-title">ROLE</span><p>Programmeur, Designer</p></div><div class="role-item"><span class="role-title">RESPONSABILITES</span><p>Jeux, Design</p></div><div class="role-item"><span class="role-title">LANGAGES</span><p>HTML, CSS, JS, Python (PyGame)</p></div></div></div><div class="image-gallery"><img src="../imgs/nsiImages/nsiGame.png" class="large"></div><p class="image-description">Le site, nommé Monke Games, présente les jeux, le téléchargement du jeu créé avec PyGame, le code source de ce dernier, et le logbook (rendu du projet).</p><div class="video-container"><video autoplay loop muted playsinline style><source src="../imgs/nsiImages/nsiBingo.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Le premier jeu disponible dans le navigateur sert seulement à se <strong>détendre</strong>, c'est un mini-jeu où il faut simplement cliquer sur les cibles. Le résultat final de précision est affiché à la fin.</p><div class="video-container"><video autoplay loop muted playsinline style><source src="../imgs/nsiImages/nsiBingo2.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Le second jeu est un bingo, qui s'arrête au bout d'un certain nombre de numéros.<br><br>Les lignes horizontales et verticales ne detectent pas le bingo tant que les numéros séléctionnés ne sont pas passés.<br><br>Il est possible de miser, et de pouvoir faire comme les jeux dans lesquels l'argent est réel.</p><div class="video-container"><video autoplay loop muted playsinline style><source src="../imgs/nsiImages/nsiJeux.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Les derniers jeux sont plus axés casino en ligne.<br><br>On y retrouve un <strong>"Coinflip"</strong>, ou il y a "une chance sur deux" de gagner le double de sa mise avec un simple pile ou face, et il y a un jeu appelé <strong>"Crash"</strong> dans<br>lequel une fusée décolle et s'arrête à un multiplicateur "aléatoire". Il faut retirer l'argent avant que la fusée n'explose pour récuperer les gains.</p></div><script src="js/workspages.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Sami SAOUD</title>
+    <link rel="icon" type="image/png" href="../imgs/favicon.png">
+    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
+    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="../css/workspages.css">
+    <style>
+        * {
+            color: #fff
+        }
+
+        body {
+            background-color: #1a1818
+        }
+
+        .title {
+            color: #1a1818
+        }
+
+        .roles span {
+            color: #fff
+        }
+
+        .roles p {
+            color: #fff
+        }
+
+        .content-section {
+            background-color: #1a1818
+        }
+
+        .image-gallery {
+            background-color: #1a1818
+        }
+
+        .image-description {
+            background-color: #1a1818
+        }
+
+        .video-container {
+            background-color: #1a1818
+        }
+
+        .brown-rectangle {
+            background-color: #d5c4fc
+        }
+
+        .initial-section {
+            background-color: #1a1818
+        }
+
+        .footer {
+            background-color: #1a1818
+        }
+
+        .sidebar a::before {
+            background-color: #fff
+        }
+
+        .divider {
+            background-color: #fff
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="initial-section">
+            <div class="brown-rectangle"></div>
+            <h1 class="title">SERIOUS GAME L'ANTI-CASINO <br> 🠛</h1>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-content"><a href="../work.html">
+                    <p class="vertical-text">PROJETS</p>
+                </a>
+                <hr class="divider">
+                <p class="vertical-text">© 2024</p>
+            </div>
+        </div>
+        <div class="content-section">
+            <p class="description">Projet de différents jeux qui visent les joueurs de jeux d'argent, afin de continuer
+                à jouer sans dépenser de la monnaie réelle.</p>
+            <div class="roles">
+                <div class="role-item"><span class="role-title">ROLE</span>
+                    <p>Programmeur, Designer</p>
+                </div>
+                <div class="role-item"><span class="role-title">RESPONSABILITES</span>
+                    <p>Jeux, Design</p>
+                </div>
+                <div class="role-item"><span class="role-title">LANGAGES</span>
+                    <p>HTML, CSS, JS, Python (PyGame)</p>
+                </div>
+            </div>
+        </div>
+        <div class="image-gallery"><img src="../imgs/nsiImages/nsiGame.png" class="large"></div>
+        <p class="image-description">Le site, nommé Monke Games, présente les jeux, le téléchargement du jeu créé avec
+            PyGame, le code source de ce dernier, et le logbook (rendu du projet).</p>
+        <div class="video-container"><video autoplay loop muted playsinline style>
+                <source src="../imgs/nsiImages/nsiBingo.mp4" type="video/mp4">Votre navigateur ne supporte pas les
+                vidéos HTML5.</source>
+            </video></div>
+        <p class="image-description">Le premier jeu disponible dans le navigateur sert seulement à se
+            <strong>détendre</strong>, c'est un mini-jeu où il faut simplement cliquer sur les cibles. Le résultat final
+            de précision est affiché à la fin.</p>
+        <div class="video-container"><video autoplay loop muted playsinline style>
+                <source src="../imgs/nsiImages/nsiBingo2.mp4" type="video/mp4">Votre navigateur ne supporte pas les
+                vidéos HTML5.</source>
+            </video></div>
+        <p class="image-description">Le second jeu est un bingo, qui s'arrête au bout d'un certain nombre de
+            numéros.<br><br>Les lignes horizontales et verticales ne detectent pas le bingo tant que les numéros
+            séléctionnés ne sont pas passés.<br><br>Il est possible de miser, et de pouvoir faire comme les jeux dans
+            lesquels l'argent est réel.</p>
+        <div class="video-container"><video autoplay loop muted playsinline style>
+                <source src="../imgs/nsiImages/nsiJeux.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos
+                HTML5.</source>
+            </video></div>
+        <p class="image-description">Les derniers jeux sont plus axés casino en ligne.<br><br>On y retrouve un
+            <strong>"Coinflip"</strong>, ou il y a "une chance sur deux" de gagner le double de sa mise avec un simple
+            pile ou face, et il y a un jeu appelé <strong>"Crash"</strong> dans<br>lequel une fusée décolle et s'arrête
+            à un multiplicateur "aléatoire". Il faut retirer l'argent avant que la fusée n'explose pour récuperer les
+            gains.</p>
+    </div>
+    <script src="js/workspages.js"></script>
+</body>
+
+</html>
