--- a/projets/gen-projet.html
+++ b/projets/gen-projet.html
@@ -1,1 +1,104 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sami SAOUD</title><link rel="icon" type="image/png" href="../imgs/favicon.png"><link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css"><link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css"><link rel="stylesheet" href="../css/workspages.css"><style>.title{color:#fff}.sidebar-content{color:#fff}.content-section{background-color:#fff}.image-gallery{background-color:#fff}.image-description{background-color:#fff}.video-container{background-color:#fff}.initial-section{background-color:#fff}.footer{background-color:#fff}</style></head><body><div class="container"><div class="initial-section"><div class="brown-rectangle"></div><h1 class="title">PROJET GENIE LOGICIEL</h1></div><div class="sidebar"><div class="sidebar-content"><a href="../work.html"><p class="vertical-text">PROJETS</p></a><hr class="divider"><p class="vertical-text">© 2024</p></div></div><div class="content-section"><p class="description">Projet d'application Swing en cours de Génie Logiciel en L2.</p><div class="roles"><div class="role-item"><span class="role-title">ROLE</span><p>Product Owner</p></div><div class="role-item"><span class="role-title">RESPONSABILITES</span><p>Programmation, Design, Rectangles</p></div><div class="role-item"><span class="role-title">URL</span><p>Java, JSON, SVG</p></div></div></div><div class="image-gallery"><img src="../imgs/genProjet/gen3.png" class="wide"> <img src="../imgs/genProjet/gen5.png" class="normal"></div><p class="image-description">Le projet était de créer une application, qui, avec une <strong>API</strong> ainsi qu'une <strong>base de données</strong>.<br><br>Cette application cherche et compare les prix, atout, et + des stations essence en France.</p><div class="image-gallery"><img src="../imgs/genProjet/gen1.png" class="large"></div><p class="image-description">Faire cette application était un réel <strong>défi</strong>, car les interfaces Swing sont plutôt compliquées à designer.<br><br>Nous sommes tout de même arrivés à une interface compréhensible, et facile d'utilisation.</p><div class="image-gallery"><img src="../imgs/genProjet/gen4.png" class="wide"> <img src="../imgs/genProjet/gen2.png" class="normal"></div><div class="video-container"><p class="image-description">Demander le résultat sur l'application <strong>redirige</strong> vers un site web, qui contient des comparaisons, des graphiques, en fonction des <strong>filtres</strong> choisis.<br><br>Pour que tout cela fonctionne, il fallait d'abord créer chacune des formes que nous allions utiliser dans l'application.</p><video autoplay loop muted playsinline style><source src="../imgs/genProjet/gen.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Cette application contient une carte pratique, car elle permet de choisis des régions et département avec un seul clic.<br><br>Un <strong>clic gauche</strong> à un endroit choisi ajoute le département situé au clic, et un <strong>clic droit</strong> ajoute la région située au clic.<br><br>Il est également possible de choisir les filtres (ce qu'on va comparer), les carburants à comparer et les options (des stations essence) avec les listes déroulantes sur le côté gauche.</p></div><script src="js/workspages.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Sami SAOUD</title>
+    <link rel="icon" type="image/png" href="../imgs/favicon.png">
+    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
+    <link rel="stylesheet" href="../css/workspages.css">
+    <style>
+        .title {
+            color: #fff
+        }
+
+        .sidebar-content {
+            color: #fff
+        }
+
+        .content-section {
+            background-color: #fff
+        }
+
+        .image-gallery {
+            background-color: #fff
+        }
+
+        .image-description {
+            background-color: #fff
+        }
+
+        .video-container {
+            background-color: #fff
+        }
+
+        .initial-section {
+            background-color: #fff
+        }
+
+        .footer {
+            background-color: #fff
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="initial-section">
+            <div class="brown-rectangle"></div>
+            <h1 class="title">PROJET GENIE LOGICIEL<br> 🠛</h1>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-content"><a href="../work.html">
+                    <p class="vertical-text">PROJETS</p>
+                </a>
+                <hr class="divider">
+                <p class="vertical-text">© 2024</p>
+            </div>
+        </div>
+        <div class="content-section">
+            <p class="description">Projet d'application Swing en cours de Génie Logiciel en L2.</p>
+            <div class="roles">
+                <div class="role-item"><span class="role-title">ROLE</span>
+                    <p>Product Owner</p>
+                </div>
+                <div class="role-item"><span class="role-title">RESPONSABILITES</span>
+                    <p>Programmation, Design, Rectangles</p>
+                </div>
+                <div class="role-item"><span class="role-title">URL</span>
+                    <p>Java, JSON, SVG</p>
+                </div>
+            </div>
+        </div>
+        <div class="image-gallery"><img src="../imgs/genProjet/gen3.png" class="wide"> <img
+                src="../imgs/genProjet/gen5.png" class="normal"></div>
+        <p class="image-description">Le projet était de créer une application, qui, avec une <strong>API</strong> ainsi
+            qu'une <strong>base de données</strong>.<br><br>Cette application cherche et compare les prix, atout, et +
+            des stations essence en France.</p>
+        <div class="image-gallery"><img src="../imgs/genProjet/gen1.png" class="large"></div>
+        <p class="image-description">Faire cette application était un réel <strong>défi</strong>, car les interfaces
+            Swing sont plutôt compliquées à designer.<br><br>Nous sommes tout de même arrivés à une interface
+            compréhensible, et facile d'utilisation.</p>
+        <div class="image-gallery"><img src="../imgs/genProjet/gen4.png" class="wide"> <img
+                src="../imgs/genProjet/gen2.png" class="normal"></div>
+        <div class="video-container">
+            <p class="image-description">Demander le résultat sur l'application <strong>redirige</strong> vers un site
+                web, qui contient des comparaisons, des graphiques, en fonction des <strong>filtres</strong>
+                choisis.<br><br>Pour que tout cela fonctionne, il fallait d'abord créer chacune des formes que nous
+                allions utiliser dans l'application.</p><video autoplay loop muted playsinline style>
+                <source src="../imgs/genProjet/gen.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos
+                HTML5.</source>
+            </video>
+        </div>
+        <p class="image-description">Cette application contient une carte pratique, car elle permet de choisis des
+            régions et département avec un seul clic.<br><br>Un <strong>clic gauche</strong> à un endroit choisi ajoute
+            le département situé au clic, et un <strong>clic droit</strong> ajoute la région située au clic.<br><br>Il
+            est également possible de choisir les filtres (ce qu'on va comparer), les carburants à comparer et les
+            options (des stations essence) avec les listes déroulantes sur le côté gauche.</p>
+    </div>
+    <script src="js/workspages.js"></script>
+</body>
+
+</html>
