--- a/projets/site-boutique.html
+++ b/projets/site-boutique.html
@@ -1,1 +1,76 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sami SAOUD</title><link rel="icon" type="image/png" href="../imgs/favicon.png"><link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css"><link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css"><link rel="stylesheet" href="../css/workspages.css"><style>.brown-rectangle{background-color:#ba9368}.title{color:#fff}.content-section{background-color:#fff}</style></head><body><div class="container"><div class="initial-section"><div class="brown-rectangle"></div><h1 class="title">SITE WEB BOUTIQUE</h1></div><div class="sidebar"><div class="sidebar-content"><a href="../work.html"><p class="vertical-text">PROJETS</p></a><hr class="divider"><p class="vertical-text">© 2024</p></div></div><div class="content-section"><p class="description">Un site web de boutique<br>basique, que j'ai créé pour apprendre à<br>créer des serveurs web avec Python.</p><div class="roles"><div class="role-item"><span class="role-title">ROLE</span><p>Indépendant</p></div><div class="role-item"><span class="role-title">RESPONSABILITES</span><p>Design, Programming</p></div><div class="role-item"><span class="role-title">LANGAGES</span><p>HTML, CSS, JS</p></div></div></div><div class="image-gallery"><img src="../imgs/boutiqueProjet/siteCo1.png" class="large"></div><p class="image-description">Ce site m'a servi à découvrir les serveurs en <strong>Python</strong>, ainsi<br>que tout le processus de mémorisation des données utilisateurs, avec les <strong>cookies</strong> par exemple.</p><div class="image-gallery"><img src="../imgs/boutiqueProjet/siteCo3.png" class="wide"> <img src="../imgs/boutiqueProjet/siteCo2.png" class="normal"></div><p class="image-description">Le site a une fonction de <strong>panier</strong> fonctionnel.<br>Le panier est mémorisé dans un fichier json, avec les noms<br>d'utilisateur et leurs mots de passes <strong>cryptés</strong> (évidemment).</p><div class="video-container"><video autoplay loop muted playsinline style><source src="../imgs/boutiqueProjet/donuts.mp4" type="video/mp4">Votre navigateur ne supporte pas les vidéos HTML5.</source></video></div><p class="image-description">Le formulaire vérifie si l'utilisateur <strong>existe déjà,</strong> et si c'est le cas, il le ramène vers la page de connexion.<br>Sinon, le compte se crée, et l'utilisateur peut ensuite se <strong>connecter</strong> et retrouver son panier.</p></div><script src="js/workspages.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Sami SAOUD</title>
+    <link rel="icon" type="image/png" href="../imgs/favicon.png">
+    <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
+    <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
+    <link rel="stylesheet" href="../css/workspages.css">
+    <style>
+        .brown-rectangle {
+            background-color: #ba9368
+        }
+
+        .title {
+            color: #fff
+        }
+
+        .content-section {
+            background-color: #fff
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="initial-section">
+            <div class="brown-rectangle"></div>
+            <h1 class="title">SITE WEB BOUTIQUE<br> 🠛</h1>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-content"><a href="../work.html">
+                    <p class="vertical-text">PROJETS</p>
+                </a>
+                <hr class="divider">
+                <p class="vertical-text">© 2024</p>
+            </div>
+        </div>
+        <div class="content-section">
+            <p class="description">Un site web de boutique<br>basique, que j'ai créé pour apprendre à<br>créer des
+                serveurs web avec Python.</p>
+            <div class="roles">
+                <div class="role-item"><span class="role-title">ROLE</span>
+                    <p>Indépendant</p>
+                </div>
+                <div class="role-item"><span class="role-title">RESPONSABILITES</span>
+                    <p>Design, Programming</p>
+                </div>
+                <div class="role-item"><span class="role-title">LANGAGES</span>
+                    <p>HTML, CSS, JS</p>
+                </div>
+            </div>
+        </div>
+        <div class="image-gallery"><img src="../imgs/boutiqueProjet/siteCo1.png" class="large"></div>
+        <p class="image-description">Ce site m'a servi à découvrir les serveurs en <strong>Python</strong>, ainsi<br>que
+            tout le processus de mémorisation des données utilisateurs, avec les <strong>cookies</strong> par exemple.
+        </p>
+        <div class="image-gallery"><img src="../imgs/boutiqueProjet/siteCo3.png" class="wide"> <img
+                src="../imgs/boutiqueProjet/siteCo2.png" class="normal"></div>
+        <p class="image-description">Le site a une fonction de <strong>panier</strong> fonctionnel.<br>Le panier est
+            mémorisé dans un fichier json, avec les noms<br>d'utilisateur et leurs mots de passes
+            <strong>cryptés</strong> (évidemment).</p>
+        <div class="video-container"><video autoplay loop muted playsinline style>
+                <source src="../imgs/boutiqueProjet/donuts.mp4" type="video/mp4">Votre navigateur ne supporte pas les
+                vidéos HTML5.</source>
+            </video></div>
+        <p class="image-description">Le formulaire vérifie si l'utilisateur <strong>existe déjà,</strong> et si c'est le
+            cas, il le ramène vers la page de connexion.<br>Sinon, le compte se crée, et l'utilisateur peut ensuite se
+            <strong>connecter</strong> et retrouver son panier.</p>
+    </div>
+    <script src="js/workspages.js"></script>
+</body>
+
+</html>
