Ajouts de flèches dans les projets

--- a/projets/creative-seeds.html
+++ b/projets/creative-seeds.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/zda3gdw.css">
     <link rel="stylesheet" href="https://use.typekit.net/cvn8slu.css">
     <link rel="stylesheet" href="../css/workspages.css">
+
     <style>
         * {
             color: #000
@@ -60,7 +61,14 @@
     <div class="container">
         <div class="initial-section">
             <div class="brown-rectangle"></div>
-            <h1 class="title">CREATIVE SEEDS<br> 🠛</h1>
+            <h1 class="title">CREATIVE SEEDS<br>
+                <div class="scroll-prompt" scroll-prompt="" ng-show="showPrompt" style="opacity: 1;">
+                    <div class="scroll-prompt-arrow-container">
+                        <div class="scroll-prompt-arrow"><div></div></div>
+                        <div class="scroll-prompt-arrow"><div></div></div>
+                    </div>
+                </div>
+            </h1>
         </div>
         <div class="sidebar">
             <div class="sidebar-content"><a href="../work.html">
@@ -96,7 +104,8 @@
         <p class="image-description">Après avoir modélisé les vêtements et texturisé le personnage grâce à
             <strong>Maya</strong><br>et <strong>Adobe Substance</strong>, j'ai créé un petit monde, pour montrer les
             animations importées de <strong>Mixamo</strong>, et j'ai codé le mouvement<br>du personnage sur
-            <strong>Unreal Engine</strong>.</p>
+            <strong>Unreal Engine</strong>.
+        </p>
     </div>
     <script src="js/workspages.js"></script>
 </body>
