--- a/projets/site-boutique.html
+++ b/projets/site-boutique.html
@@ -28,7 +28,18 @@
     <div class="container">
         <div class="initial-section">
             <div class="brown-rectangle"></div>
-            <h1 class="title">SITE WEB BOUTIQUE<br> 🠛</h1>
+            <h1 class="title">SITE WEB BOUTIQUE<br>
+                <div class="scroll-prompt" scroll-prompt="" ng-show="showPrompt" style="opacity: 1; ">
+                    <div class="scroll-prompt-arrow-container">
+                        <div class="scroll-prompt-arrow">
+                            <div></div>
+                        </div>
+                        <div class="scroll-prompt-arrow">
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </h1>
         </div>
         <div class="sidebar">
             <div class="sidebar-content"><a href="../work.html">
@@ -61,14 +72,16 @@
                 src="../imgs/boutiqueProjet/siteCo2.png" class="normal"></div>
         <p class="image-description">Le site a une fonction de <strong>panier</strong> fonctionnel.<br>Le panier est
             mémorisé dans un fichier json, avec les noms<br>d'utilisateur et leurs mots de passes
-            <strong>cryptés</strong> (évidemment).</p>
+            <strong>cryptés</strong> (évidemment).
+        </p>
         <div class="video-container"><video autoplay loop muted playsinline style>
                 <source src="../imgs/boutiqueProjet/donuts.mp4" type="video/mp4">Votre navigateur ne supporte pas les
                 vidéos HTML5.</source>
             </video></div>
         <p class="image-description">Le formulaire vérifie si l'utilisateur <strong>existe déjà,</strong> et si c'est le
             cas, il le ramène vers la page de connexion.<br>Sinon, le compte se crée, et l'utilisateur peut ensuite se
-            <strong>connecter</strong> et retrouver son panier.</p>
+            <strong>connecter</strong> et retrouver son panier.
+        </p>
     </div>
     <script src="js/workspages.js"></script>
 </body>
