May be the final commit

--- a/projets/gen-projet.html
+++ b/projets/gen-projet.html
@@ -15,7 +15,7 @@
         }
 
         .sidebar-content {
-            color: #fff
+            color: #1a1818
         }
 
         .content-section {
