--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
         </div>
         <div class="content">
             <h1 class="hello">Contact</h1>
-            <p class="subtext">Étudiant à la recherche de nouvelles opportunités et de projets.<br><br>N’hésitez pas à
+            <p class="subtext">Étudiant à la recherche d'un stage de minimum 6 semaines, à partir du 5 mai 2025.<br><br>N’hésitez pas à
                 me contacter pour en discuter !</p>
             <div class="contact">
                 <p>Email :</p>
-                <p></p><a href="mailto:samisaoud.pro@gmail.com"><u>samisaoud.pro@gmail.com</u></a>
+                <p></p><a href="mailto:sami.ssaoud@gmail.com"><u>sami.ssaoud@gmail.com</u></a>
             </div>
         </div>
     </div>
