--- a/projets/casino.html
+++ b/projets/casino.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sami SAOUD</title>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="../styles/pageprojet.css">
     <link rel="stylesheet" href="../styles/load.css">
     <script defer src="../js/pageproj.js"></script>
@@ -161,7 +162,7 @@
                 </div>
                 
                 <div class="img img1 next">
-                    <a href="../index.html">
+                    <a href="../projets.html">
                         <img src="../assets/transparent.png" alt="">
                         <div class="project-info">AUTRES PROJET</div>
                     </a>
@@ -177,11 +178,11 @@
         <div class="footer-content">
             <div class="footer-section">
                 <span class="footer-title">TYPE</span>
-                <span class="footer-text">PROJET UNIVERSITAIRE</span>
+                <span class="footer-text">PROJET LYCÉE</span>
             </div>
             <div class="footer-section">
                 <span class="footer-title">LOGICIELS</span>
-                <span class="footer-text">MAYA ADOBE-SUBSTANCE UNREAL BLENDER</span>
+                <span class="footer-text">VSCODE</span>
             </div>
             <div class="footer-scroll">
                 <span class="scroll-line"></span>
