trying to fix all bugs

--- a/projets.html
+++ b/projets.html
@@ -2,9 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sami SAOUD</title>
-    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="./styles/projets.css">
     <link rel="stylesheet" href="./styles/load.css">
     <script defer src="./js/projets.js"></script>
@@ -33,8 +32,8 @@
         <div class="container">
             <div class="slider-overlay"></div>
             <section>
-                <div class="img" data-title="EN CONSTRUCTION" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
-                    <a href="#"><img src="assets/ancienPT/code.png" alt=""></a>
+                <div class="img" data-title="Ancien Portoflio Web" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
+                    <a href="projets/ancienPT.html"><img src="assets/ancienPT/code.png" alt=""></a>
                     <div class="project-info">
                         <span class="project-number"></span>
                         <h3 class="project-title"></h3>
