--- a/projets/casino.html
+++ b/projets/casino.html
@@ -2,9 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sami SAOUD</title>
-    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="../styles/pageprojet.css">
     <link rel="stylesheet" href="../styles/load.css">
     <script defer src="../js/pageproj.js"></script>
@@ -162,7 +161,7 @@
                 </div>
                 
                 <div class="img img1 next">
-                    <a href="../projets.html">
+                    <a href="../index.html">
                         <img src="../assets/transparent.png" alt="">
                         <div class="project-info">AUTRES PROJET</div>
                     </a>
@@ -178,11 +177,11 @@
         <div class="footer-content">
             <div class="footer-section">
                 <span class="footer-title">TYPE</span>
-                <span class="footer-text">PROJET LYCÉE</span>
+                <span class="footer-text">PROJET UNIVERSITAIRE</span>
             </div>
             <div class="footer-section">
                 <span class="footer-title">LOGICIELS</span>
-                <span class="footer-text">VSCODE</span>
+                <span class="footer-text">MAYA ADOBE-SUBSTANCE UNREAL BLENDER</span>
             </div>
             <div class="footer-scroll">
                 <span class="scroll-line"></span>
