--- a/projets/creativeSeeds.html
+++ b/projets/creativeSeeds.html
@@ -2,9 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sami SAOUD</title>
-    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="../styles/pageprojet.css">
     <link rel="stylesheet" href="../styles/load.css">
     <script defer src="../js/pageproj.js"></script>
