removed animation for marquee

--- a/about.html
+++ b/about.html
@@ -61,15 +61,7 @@
     
         <div class="marquee">
             <div class="marquee-inner">
-                <span>VOUS AIMEZ MON TRAVAIL ? ÉCHANGONS !&nbsp;</span>
-                <span>INTÉRESSÉ PAR MES PROJETS ? DISCUTONS ! &nbsp;</span>
-                <span>BESOIN D’UN DÉVELOPPEUR PASSIONNÉ ? CONTACTEZ-MOI ! &nbsp;</span>
-                <span>VOUS AIMEZ MON TRAVAIL ? ÉCHANGONS !&nbsp;</span>
-                <span>INTÉRESSÉ PAR MES PROJETS ? DISCUTONS ! &nbsp;</span>
-                <span>BESOIN D’UN DÉVELOPPEUR PASSIONNÉ ? CONTACTEZ-MOI ! &nbsp;</span>
-                <span>VOUS AIMEZ MON TRAVAIL ? ÉCHANGONS !&nbsp;</span>
-                <span>INTÉRESSÉ PAR MES PROJETS ? DISCUTONS ! &nbsp;</span>
-                <span>BESOIN D’UN DÉVELOPPEUR PASSIONNÉ ? CONTACTEZ-MOI ! &nbsp;</span>
+                <span>CONTACTEZ-MOI !</span>
             </div>
         </div>
     
