size of marquee text

--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
             </div>
         </div>
     
-        <div class="marquee">
-            <div class="marquee-inner">
+        <div class="contactez">
+            <div class="contactez-inner">
                 <span>CONTACTEZ-MOI !</span>
             </div>
         </div>
