--- a/projets.html
+++ b/projets.html
@@ -32,8 +32,8 @@
         <div class="container">
             <div class="slider-overlay"></div>
             <section>
-                <div class="img" data-title="Ancien Portoflio Web" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
-                    <a href="projets/ancienPT.html"><img src="assets/ancienPT/code.png" alt=""></a>
+                <div class="img" data-title="EN CONSTR   UCTION" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
+                    <a href="#"><img src="assets/ancienPT/code.png" alt=""></a>
                     <div class="project-info">
                         <span class="project-number"></span>
                         <h3 class="project-title"></h3>
