--- a/projets.html
+++ b/projets.html
@@ -25,13 +25,21 @@
     </header>
 
     <main>
-        <div class="section-titleF">
-            <h1>PROJETS</h1>
-        </div>
         
         <div class="container">
             <div class="slider-overlay"></div>
             <section>
+
+                <div class="img" data-title="Prototype Jeu Vidéo" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
+                    <a href="#"><img src="assets/ancienPT/code.png" alt=""></a>
+                    <div class="project-info">
+                        <span class="project-number"></span>
+                        <h3 class="project-title"></h3>
+                        <p class="project-tech"></p>
+                    </div>
+                </div>
+
+
                 <div class="img" data-title="EN CONSTR   UCTION" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
                     <a href="#"><img src="assets/ancienPT/code.png" alt=""></a>
                     <div class="project-info">
