dragging sur tel corrigé ?

--- a/projets.html
+++ b/projets.html
@@ -30,7 +30,7 @@
             <div class="slider-overlay"></div>
             <section>
 
-                <div class="img" data-title="Prototype Jeu Vidéo" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
+                <div class="img" data-title="Prototype Jeu Vidéo" data-number="006" data-tech="GDscript" data-year="2025">
                     <a href="#"><img src="assets/ancienPT/code.png" alt=""></a>
                     <div class="project-info">
                         <span class="project-number"></span>
@@ -38,17 +38,6 @@
                         <p class="project-tech"></p>
                     </div>
                 </div>
-
-
-                <div class="img" data-title="EN CONSTR   UCTION" data-number="006" data-tech="HTML, CSS, JS" data-year="2024">
-                    <a href="#"><img src="assets/ancienPT/code.png" alt=""></a>
-                    <div class="project-info">
-                        <span class="project-number"></span>
-                        <h3 class="project-title"></h3>
-                        <p class="project-tech"></p>
-                    </div>
-                </div>
-    
                 <div class="img" data-title="Creative Seeds" data-number="005" data-tech="C#, Maya, Unreal, Substance" data-year="2024">
                     <a href="projets/creativeSeeds.html"><img src="assets/creativeSeeds/creatS.png" alt=""></a>
                     <div class="project-info">
