--- a/projets/casino.html
+++ b/projets/casino.html
@@ -161,7 +161,7 @@
                 </div>
                 
                 <div class="img img1 next">
-                    <a href="../index.html">
+                    <a href="../projets.html">
                         <img src="../assets/transparent.png" alt="">
                         <div class="project-info">AUTRES PROJET</div>
                     </a>
